Swagger fix, changed endpoint for user info
