# node-server-app/api/docs/swagger.yaml
@@ -154,20 +154,14 @@ paths:
             $ref: '#definitions/Error'
         500: 
           description: INTERNAL SERVER ERROR
-  /user/{userId}:
+  /user/me:
     get:
       security:
       - Bearer: []
       tags:
       - Users
-      summary: Get information about user
-      description: This endpoint enable to get information about given user
-      parameters:
-      - name: userId
-        in: path
-        type: string
-        required: true
-        description: User's ID
+      summary: Get information about token owner
+      description: This endpoint enable to get information about token owner
       produces:
         - application/json
       responses:
@@ -175,16 +169,8 @@ paths:
           description: OK
           schema:
             $ref: '#definitions/UserInfo'
-        400:
-          description: BAD REQUEST
-          schema:
-            $ref: '#definitions/Error'  
         401:
           description: UNAUTHORIZED
-          schema:
-            $ref: '#definitions/Error'
-        404:
-          description: NOT FOUND
           schema:
             $ref: '#definitions/Error'
         500: 
