# node-server-app/api/routes/user.js
@@ -2,7 +2,7 @@ const express = require("express")
 const router = express.Router()
 const checkAuth = require("../auth/auth")
 const { userSignUpValidator, userLoginValidator, refreshTokenValidator, loginWithFacebookValidator } = require("../validators/userValidator")
-const { userSignUp, userLogin, refreshToken, loginWithFacebook, getUserInfo } = require("../controllers/userController")
+const { userSignUp, userLogin, refreshToken, loginWithFacebook, aboutMe } = require("../controllers/userController")
 
 // routes below
 // params: router.<http_method>(path, authValidator?, dataValidator?, method)
@@ -10,7 +10,7 @@ router.post("/signup", userSignUpValidator, userSignUp)
 router.post("/login", userLoginValidator, userLogin)
 router.post("/refresh-token", refreshTokenValidator, refreshToken)
 router.post("/login-facebook", loginWithFacebookValidator, loginWithFacebook)
-router.get("/:userId", checkAuth, getUserInfo)
+router.get("/me", checkAuth, aboutMe)
 
 
 module.exports = router
